update bib files

--- a/original_bib.bib
+++ b/original_bib.bib
@@ -13,6 +13,13 @@
   school={Stanford University}
 }
 
+@book{hartley2003multiple,
+  title={Multiple view geometry in computer vision},
+  author={Hartley, Richard and Zisserman, Andrew},
+  year={2003},
+  publisher={Cambridge university press}
+}
+
 @article{hirschmuller2007stereo,
   title={Stereo processing by semiglobal matching and mutual information},
   author={Hirschmuller, Heiko},
@@ -22,11 +29,4 @@
   pages={328--341},
   year={2007},
   publisher={IEEE}
-}
-
-@book{szeliski2010computer,
-  title={Computer vision: algorithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  publisher={Springer Science \& Business Media}
 }
