--- a/refined_bib.bib
+++ b/refined_bib.bib
@@ -12,16 +12,16 @@
     year = {1974}
 }
 
+@book{hartley2003multiple,
+    author = {Hartley, Richard and Zisserman, Andrew},
+    publisher = {Cambridge University Press},
+    title = {Multiple View Geometry in Computer Vision},
+    year = {2003}
+}
+
 @article{hirschmuller2007stereo,
     author = {Hirschmuller, Heiko},
     journal = {PAMI},
     title = {Stereo processing by semiglobal matching and mutual information},
     year = {2007}
-}
-
-@book{szeliski2010computer,
-    author = {Szeliski, Richard},
-    publisher = {Springer Science \& Business Media},
-    title = {Computer Vision: Algorithms and Applications},
-    year = {2010}
 }
